[gd_scene load_steps=7 format=3 uid="uid://2l4k5j7qc47v"]

[ext_resource type="Theme" uid="uid://dyjxxuidige6x" path="res://resources/themes/card_theme.tres" id="1_7vkkc"]
[ext_resource type="Script" uid="uid://dhiydrjm8gxld" path="res://components/Card/Card.gd" id="1_ojsuk"]
[ext_resource type="Texture2D" uid="uid://bfkmoktygl0yh" path="res://assets/images/card_front.png" id="2_ojsuk"]
[ext_resource type="Texture2D" uid="uid://df12lw8elt430" path="res://assets/images/card_back.png" id="2_rdgjo"]
[ext_resource type="Texture2D" uid="uid://cwcmoy6simygm" path="res://assets/images/cards/bread.png" id="5_m3u8l"]
[ext_resource type="Texture2D" uid="uid://b0dka2hbkus3t" path="res://assets/images/circle.png" id="6_q25bf"]

[node name="Card" type="Node2D"]
script = ExtResource("1_ojsuk")

[node name="CardBack" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -190.0
offset_right = 142.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_rdgjo")

[node name="CardFront" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -190.0
offset_right = 142.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_7vkkc")
texture = ExtResource("2_ojsuk")
metadata/_edit_use_anchors_ = true

[node name="ImageContainer" type="Control" parent="CardFront"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 21.0
offset_right = -20.0
grow_horizontal = 2

[node name="CardImage" type="TextureRect" parent="CardFront/ImageContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_m3u8l")
expand_mode = 2
stretch_mode = 5

[node name="TextContainer" type="Panel" parent="CardFront"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_right = -22.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0

[node name="CardTitle" type="Label" parent="CardFront/TextContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.286
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -6.048
grow_horizontal = 2
text = "<missing>"
horizontal_alignment = 1

[node name="CardDescription" type="RichTextLabel" parent="CardFront/TextContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.238
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.016
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "<missing>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostContainer" type="TextureRect" parent="CardFront"]
modulate = Color(0.783523, 0.783523, 0.783523, 1)
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.81
anchor_top = 0.037
anchor_right = 0.951
anchor_bottom = 0.142
offset_left = -0.0400543
offset_top = -0.0600004
offset_right = -0.0840454
offset_bottom = 0.0399971
texture = ExtResource("6_q25bf")
expand_mode = 1

[node name="CardCost" type="Label" parent="CardFront/CostContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -192.0
offset_right = 144.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
